@@ -1,3 +1,8 @@
+2011-08-22  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/command/replicate.py:
+	  Make it easier to use for other projects.
+
 2011-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/command/main.py:
